<resources>
    <string name="app_name">CocktailsProject</string>
    <string name="incarner_ce_personnage">Incarner ce personnage</string>
    <string name="genre">Genre:</string>
    <string name="apparitions">Apparitions:</string>
    <string name="affiliations">Affiliations:</string>
    <string name="lien_wiki">Lien wiki:</string>
    <string name="textview">TextView</string>
    <string name="espece">Espece:</string>
    <string name="date_de_naissance">Date de naissance:</string>
    <string name="select">Select filter</string>
    <string name="remove">Remove</string>
    <string name="value">Filter’s value</string>
    <string name="error" />
    <string name="no_result" />
    <string name="connection_failed" />
</resources>